# rPython

./: DESCRIPTION  README.REQ  cleanup  configure  configure.ac  configure.win
R/: python.assign.R  python.call.R  python.exec.R
man/: python.call.Rd  python.exec.Rd
src/: Makevars  pycall.c
tests/: assign-hash.R
